# ratio_consensus

./: CMakeLists.txt  CMakeLists_old  README.md  go.csv  gu.csv  package.xml  todo.txt
launch/: .main.launch.swp  deployment.launch  main.launch  sip_1.csv  sip_1h.csv  sip_2.csv  sip_2h.csv  sip_3.csv
msg/: AckMsg.msg  TwoScalarMsg.msg  all_info.msg  ratio_consensus_msg.msg  rto_derp_msg.msg  yzMsg.msg
scripts/: 0.csv  1.csv  132.239.20.29  2.csv  3.csv  4.csv  5.csv  6.csv  7.csv  8.csv  9.csv  counter.py  go.csv  gu.csv  main.py  master.py  node.py  poll.py  reg-test-wave.csv  scaled_interp_Pref.csv  slave.py
